Bug 513945 - kitinerary-extractor crashes on PDF
Summary: kitinerary-extractor crashes on PDF
Status: RESOLVED FIXED
Alias: None
Product: KDE Itinerary
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Volker Krause
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-29 11:33 UTC by Nicolas Fella
Modified: 2025-12-29 17:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2025-12-29 11:33:55 UTC
Internal Error (0): Call to Object where the object was type 5, not the expected type 8

#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007ffff5e81493 in __pthread_kill_internal (threadid=<optimized out>, signo=6) at pthread_kill.c:89
#2  0x00007ffff5e2715e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#3  0x00007ffff5e0e6d0 in __GI_abort () at abort.c:77
#4  0x00007ffff7c543e0 in Object::getStream (this=<optimized out>) at /home/nico/kde/usr/include/poppler/Object.h:507
#5  KItinerary::PdfImagePrivate::load (this=0x44aa60) at /home/nico/kde/src/kitinerary/src/lib/pdf/pdfimage.cpp:130
#6  0x00007ffff7c54410 in KItinerary::PdfImage::image (this=this@entry=0x7fffffffc6f0) at /home/nico/kde/src/kitinerary/src/lib/pdf/pdfimage.cpp:191
#7  0x00007ffff7c69713 in KItinerary::PdfDocumentProcessor::expandNode (this=0x449310, node=..., engine=0x7fffffffcb00)
    at /home/nico/kde/src/kitinerary/src/lib/processors/pdfdocumentprocessor.cpp:118
#8  0x00007ffff7ae0811 in KItinerary::ExtractorEnginePrivate::processNode (this=this@entry=0x446730, node=...)
    at /home/nico/kde/src/kitinerary/src/lib/engine/extractorengine.cpp:58
#9  0x00007ffff7ae1042 in KItinerary::ExtractorEnginePrivate::processNode (this=0x446730, node=...)
    at /home/nico/kde/src/kitinerary/src/lib/engine/extractorengine.cpp:54
#10 KItinerary::ExtractorEngine::extract (this=this@entry=0x7fffffffcb00) at /home/nico/kde/src/kitinerary/src/lib/engine/extractorengine.cpp:153
#11 0x0000000000404b70 in main (argc=<optimized out>, argv=<optimized out>) at /home/nico/kde/src/kitinerary/src/cli/main.cpp:197
Comment 1 Volker Krause 2025-12-29 15:26:42 UTC
Git commit df9eb64fde0fb82589e93f8bd987aa9ef8127285 by Volker Krause.
Committed on 29/12/2025 at 15:26.
Pushed by vkrause into branch 'master'.

Fix crash on referenced but non-existent PDF masks

M  +2    -2    src/lib/pdf/pdfimage.cpp

https://invent.kde.org/pim/kitinerary/-/commit/df9eb64fde0fb82589e93f8bd987aa9ef8127285
Comment 2 Volker Krause 2025-12-29 17:26:21 UTC
Git commit 865df2e8a7ef4f66010d15fd47e6e09f60b864cb by Volker Krause.
Committed on 29/12/2025 at 17:26.
Pushed by vkrause into branch 'release/25.12'.

Fix crash on referenced but non-existent PDF masks
(cherry picked from commit df9eb64fde0fb82589e93f8bd987aa9ef8127285)

M  +2    -2    src/lib/pdf/pdfimage.cpp

https://invent.kde.org/pim/kitinerary/-/commit/865df2e8a7ef4f66010d15fd47e6e09f60b864cb