Fix crash on referenced but non-existent PDF masks

BUG: 513945
(cherry picked from commit df9eb64fde0fb82589e93f8bd987aa9ef8127285)